--- a/src/Styles/Index.module.css
+++ b/src/Styles/Index.module.css
@@ -3,10 +3,6 @@
     padding: 0;
     margin: 0;
 }
-body{
-    background-color: lavender;
-    font-family: Arial, Helvetica, sans-serif;
-}
 .main{
     width: 300px;
     height: 600px;
@@ -14,20 +10,16 @@ body{
     margin: auto;
     margin-top: 80px;
     border-radius: 8px;
-    background-color: white;
+    background-color: #1b0b75;
 }
 .header{
     height: 50px;
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-}
-.search{
-    text-align: center;
-    border: 1px solid tomato;
-    border-radius: 10px;
+    column-gap: 20px;
 }
 .body{
     width: 100%;
@@ -36,6 +28,7 @@ body{
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
+    color: white;
 }
 .body div{
     text-align: center;
@@ -74,4 +67,6 @@ body{
     cursor: pointer;
     background-color: white;
     color: black;
+    border-radius: 40px;
+    padding: 10px;
 }
